[package]
name = "kn"
version = "0.3.4"
edition = "2018"
autobins = false
include = [
    "**/*.rs",
    "init",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md",
    "rustfmt.toml",
]

authors = ["micouy"]
description = "nvgt/fldrs/qckly"
repository = "https://github.com/micouy/kn"
readme = "README.md"
license = "MIT"

categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "utility", "filesystem"]

[[bin]]
name = "_kn"
path = "src/main.rs"

[dependencies]
alphanumeric-sort = "1.5"
thiserror = "2.0"
pico-args = { version = "0.5", features = [] }
powierza-coefficient = "1.0.2"
serde_derive = "1.0"
serde = "1.0"
toml = "0.9"
dirs = "6.0"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = true
